// protoc --gogofaster_out=. auto_service.proto
syntax = "proto3";
package proto;

message LoginReq {
    int32 user_id = 1;
    string user_name = 2;
    string phone_id = 3;
    string password = 4;
}

message LoginResp {
    string user_id = 1;
}